welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:17: error: Unmatched closing brace '}' ignored here
}
^