welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
def marque(c: Color) {
	avance();setCouleurBrosse(c);baisseBrosse();leveBrosse();
}
def faireC() {
	marque(Color.red);marque(Color.blue);avance();gauche();
	marque(Color.blue);marque(Color.green);avance();gauche();
	marque(Color.green);marque(Color.yellow);avance();gauche();
	marque(Color.yellow);marque(Color.red);avance();gauche();
}
faireC();avance(5);faireC();recule(5);gauche();avance(5);droite();faireC();avance(5);
}
}
